--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>INSERISCI TITOLO</title>
+    <title>Simon Says</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,8 +17,69 @@
       integrity="sha512-U9Y1sGB3sLIpZm3ePcrKbXVhXlnQNcuwGQJ2WjPjnp6XHqVTdgIlbaDzJXJIAuCTp3y22t+nhI4B88F/5ldjFA=="
       crossorigin="anonymous"
     />
+    <script src="js/functions.js"></script>
   </head>
   <body>
+    <div
+      class="d-flex vh-100 w-50 m-auto justify-content-center align-items-center flex-column"
+    >
+      <div id="countdown" class="fs-1 fw-bolder"></div>
+      <p id="instructions">Memorizza i numeri entro il tempo limite</p>
+      <ul id="numbers-list" class="d-flex gap-5 list-unstyled"></ul>
+      <form id="answer-form" class="d-none">
+        <div class="d-flex gap-5" id="input-group">
+          <input
+            type="number"
+            name="inputfield"
+            class="form-control"
+            min="1"
+            max="50"
+            required
+          />
+          <input
+            type="number"
+            name="inputfield"
+            class="form-control"
+            min="1"
+            max="50"
+            required
+          />
+          <input
+            type="number"
+            name="inputfield"
+            class="form-control"
+            min="1"
+            max="50"
+            required
+          />
+          <input
+            type="number"
+            name="inputfield"
+            class="form-control"
+            min="1"
+            max="50"
+            required
+          />
+          <input
+            type="number"
+            name="inputfield"
+            class="form-control"
+            min="1"
+            max="50"
+            required
+          />
+        </div>
+        <button class="btn btn-primary mt-4 d-block mx-auto">Conferma</button>
+        <button
+          type="button"
+          id="replayButton"
+          class="btn btn-secondary mt-2 d-block mx-auto"
+        >
+          Rigioca
+        </button>
+        <p class="text-danger text-center" id="message"></p>
+      </form>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
